--- a/src/app/admin/features/channel_setting/Reports_page/Trai/broadcaster-reports/broadcaster-reports.component.html
+++ b/src/app/admin/features/channel_setting/Reports_page/Trai/broadcaster-reports/broadcaster-reports.component.html
@@ -7,7 +7,7 @@
         <div class="col-md-12 Head d-flex justify-content-center align-items-center mb-3">
             <span class="span">Monthly Broadcaster Report</span>
         </div>
-        <div class="card col-md-12 d-block justify-content-center align-items-center mb-3 onlinebox" 
+        <div class="card col-md-12 d-block justify-content-center align-items-center mb-3 onlinebox"
             style="padding: 1rem;">
             <div class="col-12  display justify-content-center align-items-center">
                 <div class="col-12 col-md-12  justify-content-center align-items-center  ">
@@ -185,100 +185,100 @@
     </div>
 </div>
 <div *ngIf="allType== '2'">
-    <div class="col-12 col-md-2 d-flex  justify-content-start align-items-start mb-3">
-        <button type="button" class="btn btn-primary bttn" (click)="goBack()"><i
-                class="fa-solid fa-reply mx-2"></i>Back</button>
-    </div>
-    <div style="position: sticky;top: 6%;z-index: 1000;background-color: rgba(252, 252, 252, 0.8);padding: 1rem;">
+    <div style="padding: 1rem;max-height: 775px;overflow: scroll;">
         <h3>OVER ALL PRODUCT REPORT</h3>
-    </div>
-    <div class="row " style="padding: 1rem;">
-        <div class="row d-flex align-items-center justify-content-center">
-            <div class="col-12 col-sm-12 m-3">
-                <div class="col display justify-content-between align-items-end mb-3"
-                    style="position: sticky;top: 15%;z-index: 1000;background-color: rgb(255, 253, 253);padding: 1rem;">
-                    <!-- <div class="col  mb-3"> -->
-                    <div class="display">
-                        <div class="input_box mx-2 ">
-                            <select name="year" id="year" [(ngModel)]="selectedYear">
-                                <option value="0" selected>Select Year</option>
-                                <option *ngFor="let year of years" [value]="year">{{ year }}</option>
-                            </select>
-                            <div *ngIf="submitted && !selectedYear" class="text-danger" style="font-size: small;">
-                                Year is required
+        <div class="col-12 col-md-2 d-flex  justify-content-start align-items-start mb-3">
+            <button type="button" class="btn btn-primary bttn" (click)="goBack()"><i
+                    class="fa-solid fa-reply mx-2"></i>Back</button>
+        </div>
+
+        <div class="row " style="padding: 1rem;">
+            <div class="row d-flex align-items-center justify-content-center">
+                <div class="col-12 col-sm-12 m-3">
+                    <div class="col display justify-content-between align-items-end mb-3"
+                        style="top: 15%;z-index: 1000;background-color: rgb(255, 253, 253);padding: 1rem;">
+                        <!-- <div class="col  mb-3"> -->
+                        <div class="display">
+                            <div class="input_box mx-2 ">
+                                <select name="year" id="year" [(ngModel)]="selectedYear">
+                                    <option value="0" selected>Select Year</option>
+                                    <option *ngFor="let year of years" [value]="year">{{ year }}</option>
+                                </select>
+                                <div *ngIf="submitted && !selectedYear" class="text-danger" style="font-size: small;">
+                                    Year is required
+                                </div>
+                            </div>
+                            <div class="input_box mx-2 mb-2">
+                                <select name="month" id="month" [(ngModel)]="selectedMonth" (change)="onMonthChange()">
+                                    <option value="0" selected>Select Month</option>
+                                    <option *ngFor="let month of months" [value]="month.value">{{ month.name }}
+                                    </option>
+                                </select>
+                                <div *ngIf="submitted && !selectedMonth" class="text-danger" style="font-size: small;">
+                                    Month is required
+                                </div>
+                            </div>
+                            <div class="input_box mx-2 mb-2">
+                                <select name="date" id="date" [(ngModel)]="selectedDate">
+                                    <option value="0" selected>Select Week</option>
+                                    <option *ngFor="let date of Date" [value]="date.value" [disabled]="!date.isEnabled">
+                                        {{
+                                        date.name }}
+                                    </option>
+                                </select>
+                                <div *ngIf="submitted && !selectedDate" class="text-danger" style="font-size: small;">
+                                    Week is required
+                                </div>
+                            </div>
+
+                            <div class="allreport mb-2" (click)="grtOverAllReport()">
+                                <a class="btn btn-success mx-1">
+                                    Get Report
+                                </a>
                             </div>
                         </div>
-                        <div class="input_box mx-2 mb-2">
-                            <select name="month" id="month" [(ngModel)]="selectedMonth" (change)="onMonthChange()">
-                                <option value="0" selected>Select Month</option>
-                                <option *ngFor="let month of months" [value]="month.value">{{ month.name }}
-                                </option>
-                            </select>
-                            <div *ngIf="submitted && !selectedMonth" class="text-danger" style="font-size: small;">
-                                Month is required
+                        <div class="display1">
+                            <div class="export-icon col-6 col-md-3 mx-3" (click)="getOverAllExcel()">
+                                <img src="/assets/images/icons/Excel.png" alt="Excel Icon" width="40px"
+                                    style="cursor: pointer;">
+                                <div class="tooltip">Excel</div>
+                            </div>
+                            <div class="export-icon col-6 col-md-3" (click)="getOverAllPDF()">
+                                <img src="/assets/images/icons/pdf.png" alt="PDF Icon" width="40px"
+                                    style="cursor: pointer;">
+                                <div class="tooltip">Pdf</div>
                             </div>
                         </div>
-
-
-
-
-                        <div class="input_box mx-2 mb-2">
-                            <select name="date" id="date" [(ngModel)]="selectedDate">
-                                <option value="0" selected>Select Week</option>
-                                <option *ngFor="let date of Date" [value]="date.value" [disabled]="!date.isEnabled">{{
-                                    date.name }}
-                                </option>
-                            </select>
-                            <div *ngIf="submitted && !selectedDate" class="text-danger" style="font-size: small;">
-                                Week is required
-                            </div>
+                        <!-- </div> -->
+                    </div>
+                    <!-- <h5>OVER ALL PRODUCT REPORT</h5> -->
+                    <div>
+                        <div class="tab">
+                            <span>BASE Package </span>
                         </div>
-
-                        <div class="allreport mb-2" (click)="grtOverAllReport()">
-                            <a class="btn btn-success mx-1">
-                                Get Report
-                            </a>
+                        <ag-grid-angular #agGrid id="myGrid" domLayout='autoHeight' class="ag-theme-alpine table-class"
+                            rowAnimation [gridOptions]="gridOptions" [columnDefs]="columnDefs" [rowData]="baselist"
+                            (gridReady)="onGridReady($event)" [enableCellTextSelection]="true">
+                        </ag-grid-angular>
+                    </div>
+                    <div>
+                        <div class="tab">
+                            <span>ADD ON Package </span>
                         </div>
+                        <ag-grid-angular #agGrid id="myGrid" domLayout='autoHeight' class="ag-theme-alpine table-class"
+                            rowAnimation [gridOptions]="gridOptions" [columnDefs]="columnDefs" [rowData]="addonlist"
+                            (gridReady)="onGridReady($event)" [enableCellTextSelection]="true">
+                        </ag-grid-angular>
                     </div>
-                    <div class="display1">
-                        <div class="export-icon col-6 col-md-3 mx-3" (click)="getOverAllExcel()">
-                            <img src="/assets/images/icons/Excel.png" alt="Excel Icon" width="40px" style="cursor: pointer;">
-                            <div class="tooltip">Excel</div>
+                    <div>
+                        <div class="tab">
+                            <span>ALACARTE </span>
                         </div>
-                        <div class="export-icon col-6 col-md-3" (click)="getOverAllPDF()">
-                            <img src="/assets/images/icons/pdf.png" alt="PDF Icon" width="40px" style="cursor: pointer;">
-                            <div class="tooltip">Pdf</div>
-                        </div>
+                        <ag-grid-angular #agGrid id="myGrid" domLayout='autoHeight' class="ag-theme-alpine table-class"
+                            rowAnimation [gridOptions]="gridOptions" [columnDefs]="columnDefs" [rowData]="alacartelist"
+                            (gridReady)="onGridReady($event)" [enableCellTextSelection]="true">
+                        </ag-grid-angular>
                     </div>
-                    <!-- </div> -->
-                </div>
-                <!-- <h5>OVER ALL PRODUCT REPORT</h5> -->
-                <div>
-                    <div class="tab">
-                        <span>BASE Package </span>
-                    </div>
-                    <ag-grid-angular #agGrid id="myGrid" domLayout='autoHeight' class="ag-theme-alpine table-class"
-                        rowAnimation [gridOptions]="gridOptions" [columnDefs]="columnDefs" [rowData]="baselist"
-                        (gridReady)="onGridReady($event)" [enableCellTextSelection]="true">
-                    </ag-grid-angular>
-                </div>
-                <div>
-                    <div class="tab">
-                        <span>ADD ON Package </span>
-                    </div>
-                    <ag-grid-angular #agGrid id="myGrid" domLayout='autoHeight' class="ag-theme-alpine table-class"
-                        rowAnimation [gridOptions]="gridOptions" [columnDefs]="columnDefs" [rowData]="addonlist"
-                        (gridReady)="onGridReady($event)" [enableCellTextSelection]="true">
-                    </ag-grid-angular>
-                </div>
-                <div>
-                    <div class="tab">
-                        <span>ALACARTE </span>
-                    </div>
-                    <ag-grid-angular #agGrid id="myGrid" domLayout='autoHeight' class="ag-theme-alpine table-class"
-                        rowAnimation [gridOptions]="gridOptions" [columnDefs]="columnDefs" [rowData]="alacartelist"
-                        (gridReady)="onGridReady($event)" [enableCellTextSelection]="true">
-                    </ag-grid-angular>
                 </div>
             </div>
         </div>
