--- a/src/app/admin/features/local_broadcasting/payment-channel/payment-channel.component.html
+++ b/src/app/admin/features/local_broadcasting/payment-channel/payment-channel.component.html
@@ -3,7 +3,7 @@
     <h5>Local Payment Channel</h5>
     <div class="row d-flex align-items-center justify-content-center">
         <div class="col-12 col-sm-12 col-md-12  m-3">
-            <ag-grid-angular #agGrid id="myGrid" domLayout='autoHeight' class="ag-theme-alpine table-class" rowAnimation
+            <ag-grid-angular #agGrid id="myGrid" domLayout='autoHeight' class="ag-theme-alpine table-class" rowAnimation style="max-height: 775px;overflow: scroll;"
                 [rowSelection]="rowSelection" [gridOptions]="gridOptions" [columnDefs]="columnDefs" [rowData]="rowData"
                 (gridReady)="onGridReady($event)" [enableCellTextSelection]="true">
             </ag-grid-angular>
