--- a/src/app/admin/features/operator/operator-details/operator-details.component.html
+++ b/src/app/admin/features/operator/operator-details/operator-details.component.html
@@ -1,4 +1,4 @@
-<div class="opt">
+<div class="opt" style="max-height: 775px;overflow: scroll;">
     <div class=" col-12 col-md-12 mb-4 display justify-content-start align-items-baseline   ">
         <div class="col-12 col-md-3">
             <mat-form-field class="example-full-width" style="min-width: 100%;" appearance="outline">
@@ -29,7 +29,7 @@
             </button>
         </div>
     </div>
-    <div class="grid-container">
+    <div class="grid-container" >
         <div *ngFor="let operator of pagedOperators">
             <mat-card class="card">
                 <mat-card-header>
