--- a/src/app/admin/features/subscriber/subscriber-details/subscriber-details.component.scss
+++ b/src/app/admin/features/subscriber/subscriber-details/subscriber-details.component.scss
@@ -25,7 +25,7 @@ h3 {
 // ::ng-deep .mat-mdc-text-field-wrapper {
 //     top: 10px;
 // }
-::ng-deep.ag-root-wrapper {
-    max-height: 700px !important;
-    overflow: scroll;
-}
+// ::ng-deep.ag-root-wrapper {
+//     max-height: 750px !important;
+//     overflow: scroll;
+// }
