--- a/src/app/admin/features/Bulk_operation/activation/activation.component.html
+++ b/src/app/admin/features/Bulk_operation/activation/activation.component.html
@@ -144,7 +144,7 @@
                         </div>
 
                         <ag-grid-angular #agGrid id="myGrid" domLayout='autoHeight' class="ag-theme-alpine table-class"
-                            rowAnimation [rowSelection]="rowSelection" [gridOptions]="gridOptions"
+                            rowAnimation [rowSelection]="rowSelection" [gridOptions]="gridOptions" style="max-height: 775px;overflow: scroll;"
                             [columnDefs]="columnDefs" [rowData]="rowData" (gridReady)="onGridReady()"
                             [enableCellTextSelection]="true">
                         </ag-grid-angular>
