--- a/src/app/admin/features/Bulk_operation/alacarte-activation/alacarte-activation.component.html
+++ b/src/app/admin/features/Bulk_operation/alacarte-activation/alacarte-activation.component.html
@@ -1,4 +1,4 @@
-<section class="Tab col-12">
+<section class="Tab col-12" style="max-height: 775px;overflow: scroll;">
     <div>
         <div class="d-flex tablist justify-content-center align-items-center my-3 new_d">
             <div class="tab bttn" [class.active]="selectedTab === 'activation'" (click)="selectTab('activation')">BULK
@@ -106,7 +106,7 @@
                                 </div>
 
                                 <ag-grid-angular #agGrid id="myGrid" domLayout='autoHeight'
-                                    class="ag-theme-alpine table-class" rowAnimation [rowSelection]="rowSelection"
+                                    class="ag-theme-alpine table-class" rowAnimation [rowSelection]="rowSelection" style="max-height: 775px;overflow: scroll;"
                                     [gridOptions]="gridOptions" [columnDefs]="columnDefs" [rowData]="rowData"
                                     (gridReady)="onGridReady()" [enableCellTextSelection]="true">
                                 </ag-grid-angular>
@@ -123,7 +123,6 @@
         </div>
         <div class="container ">
             <div class="row justify-content-center align-items-center mb-2">
-                <!-- File Input -->
                 <div class="col-12 col-md-2 mb-3 d-flex justify-content-center align-items-center mt-3">
                     <label class="btn btn-outline-primary">
                         <i class="fa fa-plus"></i> Choose
@@ -132,22 +131,7 @@
                     <span class="mx-3" style="color:#0a21d0">{{filePath }} </span>
                 </div>
 
-                <!-- First Select Input -->
-                <!-- <div class="col-12 col-md-3  mt-2">
-                    <select placeholder="Select the CAS" class="form-control" [(ngModel)]="castype"
-                        (change)="casPackageList()">
-                        <option value="" selected>Select CAS</option>
-                        <option *ngFor="let casItem of cas" [value]="casItem.id">
-                            {{ casItem.name }}
-                        </option>
-                    </select>
-                    <div *ngIf="submittedRemove && !castype" class="text-danger" style="font-size: small;">
-                        CAS  is required
-                    </div>
-                </div> -->
-
-                <!-- Second Select Input -->
-                <div class="col-12 col-md-5 mt-2 ">
+                                <div class="col-12 col-md-5 mt-2 ">
                     <mat-form-field class="w-100" appearance="outline">
                         <mat-label>Select Alacarte </mat-label>
                         <mat-select [formControl]="toppings" multiple [(ngModel)]="alacarteList">
@@ -164,7 +148,6 @@
                     </div>
                 </div>
 
-                <!-- Submit Button -->
                 <div
                     class="col-12 col-md-2 mt-2 d-flex justify-content-center justify-content-md-end align-items-center">
                     <button type="submit" class="btn btn-success w-100 w-md-auto" (click)="remove()" >Remove</button>
@@ -189,7 +172,7 @@
                             </div>
                         </div>
 
-                        <ag-grid-angular #agGrid id="myGrid" domLayout='autoHeight' class="ag-theme-alpine table-class"
+                        <ag-grid-angular #agGrid id="myGrid" domLayout='autoHeight' class="ag-theme-alpine table-class" style="max-height: 775px;overflow: scroll;"
                             rowAnimation [rowSelection]="rowSelection" [gridOptions]="gridOptions"
                             [columnDefs]="columnDefs1" [rowData]="rowData" (gridReady)="onGridReady()"
                             [enableCellTextSelection]="true">
