--- a/src/app/admin/features/Bulk_operation/bulk-base-change/bulk-base-change.component.scss
+++ b/src/app/admin/features/Bulk_operation/bulk-base-change/bulk-base-change.component.scss
@@ -74,3 +74,29 @@ p {
     font-size:15px;
     font-weight: 500;
 }
+
+// --------------------
+
+#myGrid {
+    width: 100%;
+    height: 600px;
+    text-align: center;
+  }
+  .responsive-grid {
+    width: 100%;
+    max-width: 1200px; 
+    margin: auto;
+  }
+  
+  
+  @media (max-width: 768px) {
+    .responsive-grid {
+        width: 100%;
+    }
+  }
+  ::ng-deep .ag-header{
+    background-color: #557c9b !important;
+  }
+  .custom{
+    background-color: lightslategrey;
+  }
