--- a/src/app/admin/features/Bulk_operation/bulk-page-updation/bulk-page-updation.component.html
+++ b/src/app/admin/features/Bulk_operation/bulk-page-updation/bulk-page-updation.component.html
@@ -1,21 +1,24 @@
-<section class="Tab col-12">
+<section class="Tab col-12" style="max-height: 775px;overflow: scroll;">
     <div class="" style="padding: 10px;">
         <p>
             BULK PACKAGE UPDATION</p>
     </div>
     <div class=" tablist justify-content-center align-items-center my-3 new_d">
-        <div class="tab mb-3 bttn" [class.active]="selectedTab === 'bulk_package'" (click)="selectbulk('bulk_package')"> BULK
+        <div class="tab mb-3 bttn" [class.active]="selectedTab === 'bulk_package'" (click)="selectbulk('bulk_package')">
+            BULK
             PACKAGE </div>
         <div class="tab mb-3 bttn" [class.active]="selectedTab === 'pending'" (click)="selectPending('pending')">PENDING
         </div>
-        <div class="tab mb-3 bttn" [class.active]="selectedTab === 'archive'" (click)="selectArchive('archive')"> ARCHIVE
+        <div class="tab mb-3 bttn" [class.active]="selectedTab === 'archive'" (click)="selectArchive('archive')">
+            ARCHIVE
         </div>
     </div>
     <div *ngIf="selectedTab === 'bulk_package'" class="commission">
         <div class="col-12 col-md-12  box  display justify-content-center align-items-center ">
             <div class="checkbox-text mb-3 mx-2">
                 <div class="checkbox-content">
-                    <mat-checkbox [(ngModel)]="isCheckboxChecked" (change)="setCheckboxState($event.checked)" id="terms"> </mat-checkbox>
+                    <mat-checkbox [(ngModel)]="isCheckboxChecked" (change)="setCheckboxState($event.checked)"
+                        id="terms"> </mat-checkbox>
                 </div>
             </div>
             <!-- <div class="input_box mb-3"  *ngIf="isCheckboxChecked">
@@ -96,7 +99,7 @@
                             style="color: rgb(11, 67, 170);font-size: 20px;font-weight: 600;">-
                             {{rowData?.length}}</span></h5>
                 </div>
-                <ag-grid-angular #agGrid id="myGrid" domLayout='autoHeight' class="ag-theme-alpine table-class"
+                <ag-grid-angular #agGrid id="myGrid" domLayout='autoHeight' class="ag-theme-alpine table-class" style="max-height: 775px;overflow: scroll;"
                     rowAnimation [rowSelection]="rowSelection" [gridOptions]="gridOptions" [columnDefs]="columnDefs"
                     [rowData]="rowData" (gridReady)="onGridReady($event)" [enableCellTextSelection]="true"
                     [rowSelection]="'multiple'" (selectionChanged)="onSelectionChanged()">
@@ -183,7 +186,7 @@
                             style="color: rgb(11, 67, 170);font-size: 20px;font-weight: 600;">-
                             {{rowData?.length}}</span></h5>
                 </div>
-                <ag-grid-angular #agGrid id="myGrid" domLayout='autoHeight' class="ag-theme-alpine table-class"
+                <ag-grid-angular #agGrid id="myGrid" domLayout='autoHeight' class="ag-theme-alpine table-class" style="max-height: 775px;overflow: scroll;"
                     rowAnimation [rowSelection]="rowSelection" [gridOptions]="gridOptions" [columnDefs]="columnDefs"
                     [rowData]="rowData" [enableCellTextSelection]="true" (selectionChanged)="onSelectionChanged()">
                 </ag-grid-angular>
@@ -207,7 +210,7 @@
                 <mat-label>Select Filter </mat-label>
                 <mat-select placeholder="Select the filter" [(ngModel)]="typelist">
                     <mat-select-filter [placeholder]="'Find CAS'" [array]="type"></mat-select-filter>
-                    <mat-option *ngFor="let typeItem of type" [value]="typeItem.value">
+                    <mat-option *ngFor="let typeItem of type" [value]="typeItem.value" (click)="onTypeChanged()">
                         {{ typeItem.label }}
                     </mat-option>
                 </mat-select>
@@ -221,15 +224,6 @@
                 </mat-select>
             </mat-form-field>
             <div *ngIf="typelist === 1">
-                <!-- <mat-form-field appearance="outline" class="mx-2">
-                    <mat-label>Select LCO</mat-label>
-                    <mat-select [(ngModel)]="operatorid">
-                        <mat-option value="">Select Operator</mat-option>
-                        <mat-option *ngFor="let operator of operatorList" [value]="operator.value">
-                            {{ operator.name }}
-                        </mat-option>
-                    </mat-select>
-                </mat-form-field> -->
                 <mat-form-field appearance="outline" class="mx-2">
                     <mat-label> Select LCO</mat-label>
                     <mat-select [(ngModel)]="operatorid" panelClass="custom-select-panel"
@@ -253,9 +247,20 @@
             </div>
 
             <div *ngIf="typelist === 3">
-                <mat-form-field appearance="outline" class="mx-2">
+                <!-- <mat-form-field appearance="outline" class="mx-2">
                     <mat-label>Enter a date range</mat-label>
                     <mat-date-range-input [rangePicker]="picker" [max]="maxDate">
+                        <input matStartDate matInput placeholder="Start date" [(ngModel)]="fromdate"
+                            (dateChange)="getFromDate($event)">
+                        <input matEndDate matInput placeholder="End date" [(ngModel)]="todate"
+                            (dateChange)="getToDate($event)">
+                    </mat-date-range-input>
+                    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                    <mat-date-range-picker #picker></mat-date-range-picker>
+                </mat-form-field> -->
+                <mat-form-field appearance="outline" class="mx-2 mobileview">
+                    <mat-label>Enter a date range</mat-label>
+                    <mat-date-range-input [rangePicker]="picker">
                         <input matStartDate matInput placeholder="Start date" [(ngModel)]="fromdate"
                             (dateChange)="getFromDate($event)">
                         <input matEndDate matInput placeholder="End date" [(ngModel)]="todate"
@@ -277,7 +282,7 @@
                     <h5>ARCHIVED LIST STATUS <span style="color: rgb(11, 67, 170);font-size: 20px;font-weight: 600;">-
                             {{rowData?.length}}</span> </h5>
                 </div>
-                <ag-grid-angular #agGrid id="myGrid" domLayout='autoHeight' class="ag-theme-alpine table-class"
+                <ag-grid-angular #agGrid id="myGrid" domLayout='autoHeight' class="ag-theme-alpine table-class" style="max-height: 775px;overflow: scroll;"
                     rowAnimation [rowSelection]="rowSelection" [gridOptions]="gridOptions" [columnDefs]="columnDefs"
                     [rowData]="rowData" [enableCellTextSelection]="true">
                 </ag-grid-angular>
