--- a/src/app/admin/features/Bulk_operation/deactivation/deactivation.component.html
+++ b/src/app/admin/features/Bulk_operation/deactivation/deactivation.component.html
@@ -95,7 +95,7 @@
                             </div>
                         </div>
 
-                        <ag-grid-angular #agGrid id="myGrid" domLayout='autoHeight' class="ag-theme-alpine table-class"
+                        <ag-grid-angular #agGrid id="myGrid" domLayout='autoHeight' class="ag-theme-alpine table-class" style="max-height: 775px;overflow: scroll;"
                             rowAnimation [rowSelection]="rowSelection" [gridOptions]="gridOptions"
                             [columnDefs]="columnDefs" [rowData]="rowData" (gridReady)="onGridReady()"
                             [enableCellTextSelection]="true">
