--- a/src/app/admin/features/channel_setting/addon-package/addon-package.component.html
+++ b/src/app/admin/features/channel_setting/addon-package/addon-package.component.html
@@ -13,7 +13,7 @@
             </div>
             <div class="col-12 col-sm-10 align-items-center justify-content-center responsive-container"
                 style="margin: auto;">
-                <ag-grid-angular #agGrid id="myGrid" domLayout='autoHeight' class="ag-theme-alpine table-class"
+                <ag-grid-angular #agGrid id="myGrid" domLayout='autoHeight' class="ag-theme-alpine table-class"  style="max-height: 775px;overflow: scroll;"
                     rowAnimation [gridOptions]="gridOptions" [columnDefs]="columnDefs" [rowData]="rowData"
                     [enableCellTextSelection]="true">
                 </ag-grid-angular>
