--- a/src/app/admin/features/channel_setting/broad-master/broad-master.component.html
+++ b/src/app/admin/features/channel_setting/broad-master/broad-master.component.html
@@ -1,8 +1,7 @@
 <div class="chart">
     <h3>Broadcaster Details</h3>
-    <div class="row " style="padding: 1rem;">
+    <div class="row " >
         <div class="">
-
             <div class="row d-flex align-items-center justify-content-center">
                 <div class=" col-md-2 col-lg-2"></div>
                 <div class="col-12 co-sm-12 col-md-8 col-lg-8">
@@ -19,7 +18,7 @@
                             Deactive
                         </button>
                     </div>
-                    <ag-grid-angular #agGrid id="myGrid" domLayout='autoHeight' class="ag-theme-alpine table-class"
+                    <ag-grid-angular #agGrid id="myGrid" domLayout='autoHeight' class="ag-theme-alpine table-class" style="max-height: 775px;overflow: scroll;"
                         rowAnimation [rowSelection]="rowSelection" [gridOptions]="gridOptions" [columnDefs]="columnDefs"
                         [rowData]="rowData" (selectionChanged)="onSelectionChanged()" (gridReady)="onGridReady($event)"
                         [enableCellTextSelection]="true">
