--- a/src/app/admin/features/channel_setting/category/category.component.html
+++ b/src/app/admin/features/channel_setting/category/category.component.html
@@ -1,13 +1,9 @@
-<div class="chart">
+
     <h3>Category Details</h3>
-    <div class="row">
-        <div class="col-xl-12 col-sm-6 col-12">
-
-
+    <div class="row" >
             <div class="row d-flex align-items-center justify-content-center">
                 <div class=" col-md-2 col-lg-2"></div>
                 <div class="col-12 co-sm-12 col-md-8 col-lg-8">
-                <!-- <div class="col-12   col-sm-10  m-3"> -->
                     <div class="col d-flex justify-content-end align-items-end mb-3">
                         <a class="btn btn-outline-success mx-1  bttn" (click)="addnew('category')">
                             <span>+</span> New
@@ -21,17 +17,13 @@
                             Deactive
                         </button>
                     </div>
-                        <ag-grid-angular #agGrid id="myGrid" domLayout='autoHeight' class="ag-theme-alpine table-class"
-                            rowAnimation [rowSelection]="rowSelection" [gridOptions]="gridOptions"
-                            [columnDefs]="columnDefs" [rowData]="rowData" (selectionChanged)="onSelectionChanged()"
-                            (gridReady)="onGridReady($event)" [enableCellTextSelection]="true">
-                        </ag-grid-angular>
-                    </div>
-
-                    <div class=" col-md-2 col-lg-2"></div>
-
-                <!-- </div> -->
-            </div>
+                    <ag-grid-angular #agGrid id="myGrid"  domLayout='autoHeight' class="ag-theme-alpine table-class" style="max-height: 775px;overflow: scroll;"
+                        rowAnimation [rowSelection]="rowSelection" [gridOptions]="gridOptions" [columnDefs]="columnDefs"
+                        [rowData]="rowData" (selectionChanged)="onSelectionChanged()" (gridReady)="onGridReady($event)"
+                        [enableCellTextSelection]="true">
+                    </ag-grid-angular>
+                </div>
+                <div class=" col-md-2 col-lg-2"></div>
+            
         </div>
     </div>
-</div>
