--- a/src/app/admin/features/channel_setting/channel-type/channel-type.component.html
+++ b/src/app/admin/features/channel_setting/channel-type/channel-type.component.html
@@ -20,7 +20,7 @@
                             Deactive
                         </button>
                     </div>
-                    <ag-grid-angular #agGrid id="myGrid" domLayout='autoHeight' class="ag-theme-alpine table-class"
+                    <ag-grid-angular #agGrid id="myGrid" domLayout='autoHeight' class="ag-theme-alpine table-class" style="max-height: 775px;overflow: scroll;" 
                         rowAnimation [rowSelection]="rowSelection" [gridOptions]="gridOptions" [columnDefs]="columnDefs"
                         [rowData]="rowData" (selectionChanged)="onSelectionChanged()" (gridReady)="onGridReady($event)"
                         [enableCellTextSelection]="true">
