--- a/src/app/admin/features/channel_setting/channel-type/channel-type.component.scss
+++ b/src/app/admin/features/channel_setting/channel-type/channel-type.component.scss
@@ -5,3 +5,27 @@
     border-radius: 4px;
     box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
   }
+
+  #myGrid {
+    width: 100%;
+    height: 600px;
+    text-align: center;
+  }
+  .responsive-grid {
+    width: 100%;
+    max-width: 1200px; 
+    margin: auto;
+  }
+  
+  
+  @media (max-width: 768px) {
+    .responsive-grid {
+        width: 100%;
+    }
+  }
+  ::ng-deep .ag-header{
+    background-color: #557c9b !important;
+  }
+  .custom{
+    background-color: lightslategrey;
+  }
