--- a/src/app/admin/features/channel_setting/package-reference/package-reference.component.scss
+++ b/src/app/admin/features/channel_setting/package-reference/package-reference.component.scss
@@ -64,25 +64,29 @@
     }
 }
 
-// ::ng-deep .mat-mdc-text-field-wrapper {
-//     height: 45px !important;
-// }
-
-// ::ng-deep .mat-mdc-option {
-//     min-height: 50px !important;
-// }
-
-// ::ng-deep .mat-mdc-form-field-type-mat-select:not(.mat-form-field-disabled) .mat-mdc-text-field-wrapper {
-//     cursor: pointer;
-//     top: 9px !important;
-// }
-
-// ::ng-deep .mat-mdc-text-field-wrapper .mat-mdc-form-field-flex .mat-mdc-floating-label {
-//     top: 20px;
-// }
 
 
 
-// ::ng-deep .ag-header{
-//     background-color: #557c9b !important;
-// }
+#myGrid {
+    width: 100%;
+    height: 600px;
+    text-align: center;
+  }
+  .responsive-grid {
+    width: 100%;
+    max-width: 1200px; 
+    margin: auto;
+  }
+  
+  
+  @media (max-width: 768px) {
+    .responsive-grid {
+        width: 100%;
+    }
+  }
+  ::ng-deep .ag-header{
+    background-color: #557c9b !important;
+  }
+  .custom{
+    background-color: lightslategrey;
+  }
