--- a/src/app/admin/features/home/home.component.html
+++ b/src/app/admin/features/home/home.component.html
@@ -1,4 +1,4 @@
-<section class="content1">
+<section class="content1" style="max-height: 775px;overflow: scroll;">
     <div class="row g-6 mb-6">
         <!-- <div class="col-xl-7 col-sm-6 col-12">
             <div class="card">
