--- a/src/app/admin/features/inventory/not-allocated/not-allocated.component.scss
+++ b/src/app/admin/features/inventory/not-allocated/not-allocated.component.scss
@@ -57,3 +57,30 @@ img {
         visibility: visible;
         opacity: 1;
     }
+
+
+
+
+#myGrid {
+    width: 100%;
+    height: 600px;
+    text-align: center;
+  }
+  .responsive-grid {
+    width: 100%;
+    max-width: 1200px; 
+    margin: auto;
+  }
+  
+  
+  @media (max-width: 768px) {
+    .responsive-grid {
+        width: 100%;
+    }
+  }
+  ::ng-deep .ag-header{
+    background-color: #557c9b !important;
+  }
+  .custom{
+    background-color: lightslategrey;
+  }
