--- a/src/app/admin/features/subscriber/subscriber-details/subscriber-details.component.html
+++ b/src/app/admin/features/subscriber/subscriber-details/subscriber-details.component.html
@@ -1,4 +1,4 @@
-<section>
+<section style="max-height: 775px;overflow: scroll;">
     <div class="input_box col-12 col-md-6 d-flex align-items-center mb-2">
         <div class="col-6 col-md-3 justify-content-end align-items-center ">
             <span class="mb-2 mr-2">STATUS </span>
