--- a/src/app/admin/features/top-sub-detail/top-sub-detail.component.html
+++ b/src/app/admin/features/top-sub-detail/top-sub-detail.component.html
@@ -26,51 +26,54 @@
         </div>
     </div>
 </section> -->
+<div style="max-height: 775px;overflow: scroll;">
 
-<div class="col-xl-12 col-sm-12 col-12 mb-3">
-    <div class="card">
-        <div class="card-body">
-            <div class="row">
-                <div class="col">
-                    <app-stb-chart></app-stb-chart>
-                    <!-- jkjhk -->
+
+    <div class="col-xl-12 col-sm-12 col-12 mb-3">
+        <div class="card">
+            <div class="card-body">
+                <div class="row">
+                    <div class="col">
+                        <app-stb-chart></app-stb-chart>
+                        <!-- jkjhk -->
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 
-<div class="card">
-    <section class="row">
-        <!-- <div class="col-12">
+    <div class="card">
+        <section class="row">
+            <!-- <div class="col-12">
             <div class="row"> -->
-                <!-- Base Package -->
-                <div class="col-12 col-md-6 col-lg-4 mb-4">
-                    <h5 class="text-center text-md-left">TOP BASE PACKAGE</h5>
-                    <ag-grid-angular domLayout="autoHeight" [enableCellTextSelection]="true" [columnDefs]="columnDefs" 
-                        [gridOptions]="gridOptions" [rowData]="baseRowData" class="ag-theme-alpine table-class"
-                        (gridReady)="onGridReady($event)">
-                    </ag-grid-angular>
-                </div>
+            <!-- Base Package -->
+            <div class="col-12 col-md-6 col-lg-4 mb-4">
+                <h5 class="text-center text-md-left">TOP BASE PACKAGE</h5>
+                <ag-grid-angular domLayout="autoHeight" [enableCellTextSelection]="true" [columnDefs]="columnDefs"
+                    [gridOptions]="gridOptions" [rowData]="baseRowData" class="ag-theme-alpine table-class"
+                    (gridReady)="onGridReady($event)">
+                </ag-grid-angular>
+            </div>
 
-                <!-- Add-On Package -->
-                <div class="col-12 col-md-6 col-lg-4 mb-4">
-                    <h5 class="text-center text-md-left">TOP ADD-ON PACKAGE</h5>
-                    <ag-grid-angular domLayout="autoHeight" [enableCellTextSelection]="true" [columnDefs]="columnDefs"
-                        [gridOptions]="gridOptions" [rowData]="addonRowData" class="ag-theme-alpine table-class"
-                        (gridReady)="onGridReady($event)">
-                    </ag-grid-angular>
-                </div>
+            <!-- Add-On Package -->
+            <div class="col-12 col-md-6 col-lg-4 mb-4">
+                <h5 class="text-center text-md-left">TOP ADD-ON PACKAGE</h5>
+                <ag-grid-angular domLayout="autoHeight" [enableCellTextSelection]="true" [columnDefs]="columnDefs"
+                    [gridOptions]="gridOptions" [rowData]="addonRowData" class="ag-theme-alpine table-class"
+                    (gridReady)="onGridReady($event)">
+                </ag-grid-angular>
+            </div>
 
-                <!-- Alacarte -->
-                <div class="col-12 col-md-6 col-lg-4 mb-4">
-                    <h5 class="text-center text-md-left">TOP ALACARTE</h5>
-                    <ag-grid-angular domLayout="autoHeight" [enableCellTextSelection]="true" [columnDefs]="columnDefs"
-                        [gridOptions]="gridOptions" [rowData]="alacarteRowData" class="ag-theme-alpine table-class"
-                        (gridReady)="onGridReady($event)">
-                    </ag-grid-angular>
-                </div>
+            <!-- Alacarte -->
+            <div class="col-12 col-md-6 col-lg-4 mb-4">
+                <h5 class="text-center text-md-left">TOP ALACARTE</h5>
+                <ag-grid-angular domLayout="autoHeight" [enableCellTextSelection]="true" [columnDefs]="columnDefs"
+                    [gridOptions]="gridOptions" [rowData]="alacarteRowData" class="ag-theme-alpine table-class"
+                    (gridReady)="onGridReady($event)">
+                </ag-grid-angular>
+            </div>
             <!-- </div>
         </div> -->
-    </section>
+        </section>
+    </div>
 </div>
